--- a/hello.html
+++ b/hello.html
@@ -3,5 +3,8 @@
   <head>
     <title>Hello Page</title>
   </head>
-  <body></body>
+  <body>
+    <h1 style="color: blue">Welcome to my page</h1>
+    Hello World!
+  </body>
 </html>
