--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1 style="color: blue">Welcome to my page</h1>
-    <h2 style="color:red">Hello</h2>
+    <h2 style="color:red;">Hello</h2>
     Hello World!
   </body>
 </html>
